test/files/neg/interop_classmanifests_arenot_typetags.check
interop_classmanifests_arenot_typetags.scala:5: error: No TypeTag available for T
    println(implicitly[TypeTag[T]])
                      ^
one error found
